--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
       
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -6,7 +6,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">   
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">   
-
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -14,20 +13,24 @@
 
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-prefix-min.css">
 
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Company Services ">
         <title>Angora</title>
        
     </head>
 
     <body>
 
-        <!-- <div id="screenloading" class="screenloading">
+        <div id="screenloading" class="screenloading">
           <div class="spinner ">
             <div class="double-bounce1"></div>
             <div class="double-bounce2"></div>
           </div>
-        </div> -->
+        </div>
 
         <button id="btnUp" class="btn rounded-circle p-2  ">
           <i class="fas fa-arrow-alt-circle-up text-white "></i>
@@ -50,7 +53,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
           <div class="container-md">
-            <a class="navbar-brand py-2" href="#"><img src="images/logo-white.png" alt="angora"></a>
+            <a class="navbar-brand py-2" href="#home"><img src="images/logo-white.png" alt="angora"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-sliders-h"></i>
             </button>
