--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style-prefix-min.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -438,35 +438,35 @@
             </div>
             <div class="end-part mt-5">
             <div id="carouselExampleIndicators" class="m-auto carousel slide carousel-fade " data-ride="carousel">
-              <ol class="carousel-indicators">
+              <ol class="carousel-indicators ">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="one active">
                   <div class="caption">
                     <p class="mb-0">Martin Jack</p>
-                    <span>From Holi</span>
+                    <!-- <span>From Holi</span> -->
                   </div>
                 </li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1" class="two">
                   <div class="caption">
                     <p class="mb-0">David Dowsy</p>
-                    <span>From Globex</span>
+                    <!-- <span>From Globex</span> -->
                   </div>
                 </li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2" class="three">
                   <div class="caption">
                     <p class="mb-0">Doglas Kosta</p>
-                    <span>From Soylent</span>
+                    <!-- <span>From Soylent</span> -->
                   </div>
                 </li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3" class="four">
                   <div class="caption">
                     <p class="mb-0">Anthony Lee</p>
-                    <span>From Initech</span>
+                    <!-- <span>From Initech</span> -->
                   </div>
                 </li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4" class="five">
                   <div class="caption">
                     <p class="mb-0">Jane Doris</p>
-                    <span>From Acme</span>
+                    <!-- <span>From Acme</span> -->
                   </div>
                 </li>
               </ol>
@@ -575,10 +575,7 @@
          <!-- End Of Contact -->
         <section class="py-5 links position-relative">
         <div class="layer">
-          <div class="arrow position-absolute">
-            <a class="text-decoration-none" href="#home"><div class="icon d-flex align-items-center justify-content-center rounded-circle"><i class="fas fa-chevron-up fa-2x text-white"></i></div></a>
-            
-          </div>
+         
           <div class="container-md">
           <div class="top">
             <div class="logo py-3 text-center">
