Edit PrgressBar And Fa-Cog

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-prefix-min.css">
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,7 +54,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
           <div class="container-md">
             <a class="navbar-brand py-2" href="#home"><img src="images/logo-white.png" alt="angora"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-sliders-h"></i>
             </button>
           
@@ -79,9 +79,9 @@
                     <a id="contact1" class="nav-link " href="#contact">Contact</a>
                 </li>
                 <li class="nav-item nav-icons  d-flex align-items-center ">
-                    <a href=""> <i class="fab fa-facebook-f pl-4 "></i> </a>
-                    <a href=""><i class="fab fa-instagram pl-3"></i></a>
-                    <a href=""><i class="fab fa-twitter pl-3"></i></a>
+                    <a href="#home"> <i class="fab fa-facebook-f pl-4 "></i> </a>
+                    <a href="#home"><i class="fab fa-instagram pl-3"></i></a>
+                    <a href="#home"><i class="fab fa-twitter pl-3"></i></a>
                 </li>
                 
 
@@ -159,19 +159,19 @@
                   <div class="item2">
                     <p class="mt-3 mb-1">Branding</p>
                     <div class="progress   ">
-                      <div class="progress-bar bar1 rounded-pill  " role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar bar1  rounded-pill progress-bar-striped progress-bar-animated " role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <p class="mt-3 mb-1">Web Design</p>
+                    <p class="mt-3 mb-1 font">Web Design</p>
                     <div class="progress   ">
-                      <div class="progress-bar bar2 rounded-pill  " role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p class="mt-3 mb-1">Graphic Design</p>
-                    <div class="progress   ">
-                      <div class="progress-bar bar3 rounded-pill  " role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar bar2 rounded-pill progress-bar-striped progress-bar-animated" role="progressbar" style="width: 95%; " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <p class="mt-3 mb-1">Graphic Design</p>
                     <div class="progress   ">
-                      <div class="progress-bar bar4 rounded-pill  " role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar bar3 rounded-pill progress-bar-striped progress-bar-animated" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="mt-3 mb-1">Graphic Design</p>
+                    <div class="progress   ">
+                      <div class="progress-bar bar4 rounded-pill progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -295,8 +295,8 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
-                        <i class="fas fa-laptop fa-2x main-color"></i>
+                      <div class="col-2 d-flex justify-content-center ">
+                        <i class="fas fa-laptop fa-2x main-color ml-"></i>
                       </div>
                       <div class="col-10 ">
                        <h3 class="mb-3">Responsive Layout</h3>
@@ -309,7 +309,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="fas fa-pencil-ruler fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -323,7 +323,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="far fa-flag fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -340,7 +340,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="far fa-address-card fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -354,7 +354,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="fas fa-cog fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -368,7 +368,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="fas fa-headset fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -384,7 +384,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="far fa-list-alt fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -398,7 +398,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="fas fa-video fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -412,7 +412,7 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="service">
                     <div class="row">
-                      <div class="col-2 d-flex justify-content-end ">
+                      <div class="col-2 d-flex justify-content-center ">
                         <i class="fas fa-sliders-h fa-2x main-color"></i>
                       </div>
                       <div class="col-10 ">
@@ -552,7 +552,7 @@
                         </div>
                         <div class="caption  ml-3">
                           <h4 class="mb-0">Say Hello</h4>
-                          <p class="mb-0" > <a class="text-decoration-none " href="">[email protected]</a></p>
+                          <p class="mb-0" > <a class="text-decoration-none " href="#contact">[email protected]</a></p>
                         </div>
                       </div>
                     </div>  
@@ -565,7 +565,7 @@
                     <input type="email" name="email" placeholder="Email" class="mb-4 form-control">
                     <input type="number" name="phone" placeholder="Phone" class=" mb-4 form-control">
                     <textarea name="textar" id="" placeholder="Message" cols="30" rows="4" class="mb-5 form-control"></textarea>
-                    <a href="" class="rounded-sm text-decoration-none px-3 py-2 mb-5 text-white main-background-color "><i class="fas fa-paper-plane mr-1"></i> Send Message</a>
+                    <a href="#contact" class="rounded-sm text-decoration-none px-3 py-2 mb-5 text-white main-background-color "><i class="fas fa-paper-plane mr-1"></i> Send Message</a>
                   </form>
                 </div>
               </div>
@@ -588,40 +588,40 @@
                   <p class="mb-1">1650 Lombard Street,</p>
                   <p class="mb-1">San Francisco, CA 94123</p>
                   <p class="mb-1">+1 (415) 876-3250</p>
-                  <p class="mb-1"><a href="">[email protected]</a></p>
+                  <p class="mb-1"><a href="#contact">[email protected]</a></p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 ">
                 <div class="caption">
                   <h5 class="pb-2 pt-4">Useful Links</h5>
-                  <p class="mb-1"><a href="">Support</a></p>
-                  <p class="mb-1"><a href="">Privacy Policy</a></p>
-                  <p class="mb-1"><a href="">Terms & Conditions</a></p>
-                  <p class="mb-1"><a href="">Affiliate Program</a></p>
-                  <p class="mb-1"><a href="">Careers</a></p>
+                  <p class="mb-1"><a href="#home">Support</a></p>
+                  <p class="mb-1"><a href="#home">Privacy Policy</a></p>
+                  <p class="mb-1"><a href="#home">Terms & Conditions</a></p>
+                  <p class="mb-1"><a href="#home">Affiliate Program</a></p>
+                  <p class="mb-1"><a href="#home">Careers</a></p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 ">
                 <div class="caption">
                   <h5 class="pb-2 pt-4">Recent Posts</h5>
-                  <p class="mb-1"><a href="">ASunset in Venice</a></p>
-                  <p class="mb-1"><a href="">Aerial View of Village</a></p>
-                  <p class="mb-1"><a href="">Lighted Concrete City</a></p>
-                  <p class="mb-1"><a href="">The Little Ghost</a></p>
-                  <p class="mb-1"><a href="">Royal Oats ft. Waldo</a></p>
+                  <p class="mb-1"><a href="#home">ASunset in Venice</a></p>
+                  <p class="mb-1"><a href="#home">Aerial View of Village</a></p>
+                  <p class="mb-1"><a href="#home">Lighted Concrete City</a></p>
+                  <p class="mb-1"><a href="#home">The Little Ghost</a></p>
+                  <p class="mb-1"><a href="#home">Royal Oats ft. Waldo</a></p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 ">
                 <div class="caption but">
                   <h5 class="pb-2 pt-4">Popular Tags</h5>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">HTML5</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">CSS3</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">JQuery</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">UX / UI</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">Web</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">Graphic</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">Design</a>
-                 <a href="" class="btn mr-1 mb-1  py-1 px-2">Development</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">HTML5</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">CSS3</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">JQuery</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">UX / UI</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">Web</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">Graphic</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">Design</a>
+                 <a href="#home" class="btn mr-1 mb-1  py-1 px-2">Development</a>
                 </div>
               </div>
             </div>
@@ -638,11 +638,11 @@
         <div class="container">
           <div class="d-flex flex-wrap justify-content-between align-items-center">
              <div class="social-icons text-white">
-               <a class="text-decoration-none" href=""><i  class="mr-4 fab fa-twitter"></i></a>
-               <a class="text-decoration-none" href=""><i  class="mr-4 fab fa-facebook-f"></i></a>
-               <a class="text-decoration-none" href=""><i  class="mr-4 fab fa-instagram"></i></a>
-               <a class="text-decoration-none" href=""><i  class="mr-4 fab fa-dribbble"></i></a>
-               <a class="text-decoration-none" href=""><i  class="mr-4 fab fa-pinterest"></i></a>
+               <a class="text-decoration-none" href="#home"><i  class="mr-4 fab fa-twitter"></i></a>
+               <a class="text-decoration-none" href="#home"><i  class="mr-4 fab fa-facebook-f"></i></a>
+               <a class="text-decoration-none" href="#home"><i  class="mr-4 fab fa-instagram"></i></a>
+               <a class="text-decoration-none" href="#home"><i  class="mr-4 fab fa-dribbble"></i></a>
+               <a class="text-decoration-none" href="#home"><i  class="mr-4 fab fa-pinterest"></i></a>
 
            </div>
             <div class="copy">
