add manifest to make app installable

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Company Services " />
     <title>Angora</title>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#f25454" />
   </head>
 
   <body>
